# OpenTel

./: README.md
examples/: CMakeLists.txt
examples/build.orig/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/build.orig/batch/: Makefile  batch_span_processor_example  cmake_install.cmake
examples/build.orig/common/: Makefile  cmake_install.cmake
examples/build.orig/common/foo_library/: Makefile  cmake_install.cmake
examples/build.orig/common/logs_foo_library/: Makefile  cmake_install.cmake
examples/build.orig/common/metrics_foo_library/: Makefile  cmake_install.cmake
examples/build.orig/grpc/: Makefile  client  cmake_install.cmake  messages.grpc.pb.cc  messages.grpc.pb.h  messages.pb.cc  messages.pb.h  server
examples/build.orig/http/: Makefile  cmake_install.cmake  http_client  http_server
examples/build.orig/logs_simple/: Makefile  cmake_install.cmake  example_logs_simple
examples/build.orig/metrics_simple/: Makefile  cmake_install.cmake
examples/build.orig/multi_processor/: Makefile  cmake_install.cmake  example_multi_processor
examples/build.orig/multithreaded/: Makefile  cmake_install.cmake  example_multithreaded
examples/build.orig/otlp/: Makefile  cmake_install.cmake  example_otlp_grpc  example_otlp_grpc_log  example_otlp_http
examples/build.orig/plugin/: Makefile  cmake_install.cmake
examples/build.orig/plugin/load/: Makefile  cmake_install.cmake  load_plugin_example
examples/build.orig/plugin/plugin/: Makefile  cmake_install.cmake
examples/build.orig/simple/: Makefile  cmake_install.cmake  example_simple
examples/common/metrics_foo_library/: foo_library.cc
examples/otlp/: docker-compose.yml
examples/otlp/opentelemetry-collector-config/: config.dev.yaml
otel-hostmetrics/: docker-compose.yaml  otel-config.yaml  otel-config.yaml.bk  prometheus.yml
